--- a/src/pages/About/index.css
+++ b/src/pages/About/index.css
@@ -1,6 +1,6 @@
 .litlle-luther {
-  width: 15rem;
-  height: 15rem;
+  width: 22rem;
+  height: 12.31rem;
   margin-bottom: 3rem;
 }
 
@@ -9,5 +9,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .litlle-luther {
+    max-width: 17.6rem;
+    max-height: 9.84rem;
+    margin-bottom: 3rem;
   }
 }
