--- a/src/_custom.scss
+++ b/src/_custom.scss
@@ -1,11 +1,15 @@
 @import "./app";
 
+@import "~bootstrap/scss/mixins/banner";
+@include bsBanner("");
+
 // scss-docs-start import-stack
 // Configuration
 @import "~bootstrap/scss/functions";
 
 @import "./assets/customVariables";
 
+@import "~bootstrap/scss/maps";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/utilities";
 
